UX: make tables in blockquotes fixes to prevent overflow

--- a/app/assets/stylesheets/common/base/topic-post.scss
+++ b/app/assets/stylesheets/common/base/topic-post.scss
@@ -1130,6 +1130,10 @@ blockquote .post__contents-cooked-quote {
   > *:last-child {
     margin-bottom: 0 !important;
   }
+
+  table {
+    table-layout: fixed; // prevents table from expanding past the post body width
+  }
 }
 
 .gap {
